# terminal-toys

./: .gitignore  DEMO.md  LICENSE  README.md  WSL_COMPATIBILITY.md  bouncing_ball.py  clock.py  fire.py  game_2048.py  life.py  matrix_rain.py  paint.py  pipes.py  pyproject.toml  setup_dev.ps1  snake.py  tetris.py  tictactoe.py
terminal_toys/: __init__.py  bouncing_ball.py  cli.py  cli_bundled.py  clock.py  fire.py  game_2048.py  life.py  matrix_rain.py  paint.py  pipes.py  snake.py  terminal_utils.py  tetris.py  tictactoe.py
terminal_toys/windows/: __init__.py  bouncing_ball.py  fire.py  life.py  matrix_rain.py  snake.py  tictactoe.py
windows/: clock.py  game_2048.py  paint.py  pipes.py  tetris.py  tictactoe.py
